--- a/core/Makefile.in
+++ b/core/Makefile.in
@@ -163,7 +163,7 @@ am__dirstamp = $(am__leading_dot)dirstamp
 savime_OBJECTS = $(am_savime_OBJECTS)
 @CATALYST_FALSE@savime_DEPENDENCIES = ../rdmap/librdmap.a
 @CATALYST_TRUE@savime_DEPENDENCIES = ../rdmap/librdmap.a \
-@CATALYST_TRUE@	/usr/local/lib/paraview-5.4/*.so
+@CATALYST_TRUE@	/usr/local/lib/libvtk*
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
@@ -375,7 +375,7 @@ AM_CPPFLAGS = \
 @CATALYST_TRUE@savime_CXXFLAGS = -I/usr/local/include/paraview-5.4 -DCATALYST
 @CATALYST_TRUE@savime_LDFLAGS = -Wl,-rpath,/usr/local/lib/paraview-5.4/ -L/usr/local/lib/paraview-5.4/ -I/usr/local/include/paraview-5.4
 @CATALYST_FALSE@savime_LDADD = -lpthread ../rdmap/librdmap.a -lrdmacm -libverbs
-@CATALYST_TRUE@savime_LDADD = -lpthread ../rdmap/librdmap.a -lrdmacm -libverbs /usr/local/lib/paraview-5.4/*.so 
+@CATALYST_TRUE@savime_LDADD = -lpthread ../rdmap/librdmap.a -lrdmacm -libverbs /usr/local/lib/libvtk* 
 all: all-am
 
 .SUFFIXES:
